force-app/main/default/objects/Form_Assignment__c/Form_Assignment__c.object-meta.xml
<CustomObject>
    <label>Form Assignment</label>
    <pluralLabel>Form Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
<nameField>
    <label>Assignment Name</label>
    <type>Text</type>
</nameField>
</CustomObject>