force-app/main/default/objects/Form_Assignment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Form Assignments</relationshipLabel>
    <relationshipName>FormAssignments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>