force-app/main/default/objects/Form_Assignment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Form Assignments</relationshipLabel>
    <relationshipName>FormAssignments</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>