force-app/main/default/objects/Form_Assignment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
        <fullName>To Do</fullName>
    </value>
<value>
        <fullName>Doing</fullName>
    </value>
<value>
        <fullName>Done</fullName>
    </value>
<value>
        <fullName>Waived</fullName>
    </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>