force-app/main/default/objects/Form_Assignment__c/fields/Visibility_End__c.field-meta.xml
<CustomField>
    <fullName>Visibility_End__c</fullName>
    <label>Visibility End</label>
    <type>Date</type>
</CustomField>