force-app/main/default/objects/Form_Assignment__c/fields/Visibility_Start__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Start__c</fullName>
    <label>Visibility Start</label>
    <type>Date</type>
</CustomField>